crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_whitespace.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `builtins` out of type-checking block. Import is used for more than type hinting.
 --> whitespace.py:5:26
  |
3 | from typing import TYPE_CHECKING␌\
4 |
5 | if TYPE_CHECKING: import builtins
  |                          ^^^^^^^^
6 | builtins.print("!")
  | -------- Used at runtime here
help: Move out of type-checking block
  |
3 ~ from typing import TYPE_CHECKING; import builtins␌\
4 |
5 ~ if TYPE_CHECKING: pass
  |
note: This is an unsafe fix and may change runtime behavior
