crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-string-union_TC010.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010.pyi:16:30: TC010 [*] Invalid string member in `X | Y`-style union type
   |
14 | type A = Value["int" | str]  # OK
15 | 
16 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^ TC010
   |
   = help: Remove quotes

ℹ Safe fix
13 13 | 
14 14 | type A = Value["int" | str]  # OK
15 15 | 
16    |-OldS = TypeVar('OldS', int | 'str', str)  # TC010
   16 |+OldS = TypeVar('OldS', int | str, str)  # TC010
