crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-string-union_TC010_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010 Invalid string member in `X | Y`-style union type
  --> TC010_3.py:21:30
   |
19 | type A = Value["Foo" | str]  # OK
20 |
21 | OldS = TypeVar('OldS', int | 'foo.Bar', str)  # TC010
   |                              ^^^^^^^^^
22 |
23 | x: ("Foo"  # TC010 (unsafe fix)
   |

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_3.py:26:25
   |
24 |       " | str" | None)
25 |
26 |   OldT = TypeVar("OldT", ("Foo"  # TC010 (unsafe fix)
   |  _________________________^
27 | |                         " | str" | None))
   | |________________________________^
