crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-string-union_TCH010_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
error[TCH010]: 4:4: Invalid string member in `X | Y`-style union type

 --> TCH010_2.py:4:4
  |
4 | x: "int" | str  # TCH010
  |    ^^^^^
5 | x: ("int" | str) | "bool"  # TCH010
  |
error[TCH010]: 5:5: Invalid string member in `X | Y`-style union type

 --> TCH010_2.py:5:5
  |
4 | x: "int" | str  # TCH010
5 | x: ("int" | str) | "bool"  # TCH010
  |     ^^^^^
  |
error[TCH010]: 5:20: Invalid string member in `X | Y`-style union type

 --> TCH010_2.py:5:20
  |
4 | x: "int" | str  # TCH010
5 | x: ("int" | str) | "bool"  # TCH010
  |                    ^^^^^^
  |
error[TCH010]: 12:20: Invalid string member in `X | Y`-style union type

  --> TCH010_2.py:12:20
   |
12 | z: list[str, str | "int"] = []  # TCH010
   |                    ^^^^^
13 | 
14 | type A = Value["int" | str]  # OK
   |
error[TCH010]: 16:30: Invalid string member in `X | Y`-style union type

  --> TCH010_2.py:16:30
   |
14 | type A = Value["int" | str]  # OK
15 | 
16 | OldS = TypeVar('OldS', int | 'str', str)  # TCH010
   |                              ^^^^^
   |
