crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__tc004_precedence_over_tc007.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `foo.Foo` out of type-checking block. Import is used for more than type hinting.
 --> <filename>:6:21
  |
4 | from typing import TYPE_CHECKING, TypeAlias
5 | if TYPE_CHECKING:
6 |     from foo import Foo  # TC004
  |                     ^^^
7 |
8 | a: TypeAlias = Foo | None  # OK
  |                --- Used at runtime here
help: Move out of type-checking block
  |
5 + from foo import Foo
6 | if TYPE_CHECKING:
7 ~     pass  # TC004
  |
note: This is an unsafe fix and may change runtime behavior
